--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -19,6 +19,9 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <!-- JQuery script -->
+    <script src="lib/jquery-1.11.3.min.js"></script>
+
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
